--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "mesto",
   "version": "1.0.0",
   "description": "Mesto project bootcamp",
-  "main": "pages/index.js",
+  "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack serve",
+    "dev": "webpack serve", 
     "predeploy": "npm run build",
-"deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
